feat: simpler CI/CD setup

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -9,53 +9,36 @@ options:
 
 pipelines:
   branches:
+    # TODO: support for feature/* (cancel build if not included in taito_environments)
     '{dev,test,stag,canary,master}':
-    # Install libraries
+    # Prepare build
     - step:
         script:
           - export taito_mode=ci
-          - taito install:$BITBUCKET_BRANCH
-    - step:
-        script:
-          - export taito_mode=ci
-          - taito artifact-prepare:$BITBUCKET_BRANCH
+          - taito build-prepare:$BITBUCKET_BRANCH
+    # Prepare artifacts in parallel
     - parallel:
-      # Execute code scans, documentation generation, and container build/push
-      # in parallel
-      - step:
-          script:
-            - export taito_mode=ci
-            - taito scan:$BITBUCKET_BRANCH
-      - step:
-          script:
-            - export taito_mode=ci
-            - taito docs:$BITBUCKET_BRANCH
       - step: # admin
           script:
             - export taito_mode=ci
-            - taito artifact-build:admin:$BITBUCKET_BRANCH $BITBUCKET_COMMIT
-            - taito artifact-push:admin:$BITBUCKET_BRANCH $BITBUCKET_COMMIT
+            - taito artifact-prepare:admin:$BITBUCKET_BRANCH $BITBUCKET_COMMIT
       - step: # client
           script:
             - export taito_mode=ci
-            - taito artifact-build:client:$BITBUCKET_BRANCH $BITBUCKET_COMMIT
-            - taito artifact-push:client:$BITBUCKET_BRANCH $BITBUCKET_COMMIT
+            - taito artifact-prepare:client:$BITBUCKET_BRANCH $BITBUCKET_COMMIT
       - step: # graphql
           script:
             - export taito_mode=ci
-            - taito artifact-build:graphql:$BITBUCKET_BRANCH $BITBUCKET_COMMIT
-            - taito artifact-push:graphql:$BITBUCKET_BRANCH $BITBUCKET_COMMIT
+            - taito artifact-prepare:graphql:$BITBUCKET_BRANCH $BITBUCKET_COMMIT
       - step: # server
           script:
             - export taito_mode=ci
-            - taito artifact-build:server:$BITBUCKET_BRANCH $BITBUCKET_COMMIT
-            - taito artifact-push:server:$BITBUCKET_BRANCH $BITBUCKET_COMMIT
+            - taito artifact-prepare:server:$BITBUCKET_BRANCH $BITBUCKET_COMMIT
       - step: # www
           script:
             - export taito_mode=ci
-            - taito artifact-build:www:$BITBUCKET_BRANCH $BITBUCKET_COMMIT
-            - taito artifact-push:www:$BITBUCKET_BRANCH $BITBUCKET_COMMIT
-    # Deploy the changes
+            - taito artifact-prepare:www:$BITBUCKET_BRANCH $BITBUCKET_COMMIT
+    # Deploy the changes to target environment
     - step:
         script:
           - export taito_mode=ci
@@ -64,39 +47,45 @@ pipelines:
         script:
           - export taito_mode=ci
           - taito deployment-deploy:$BITBUCKET_BRANCH $BITBUCKET_COMMIT
+        # TODO: revert deployment on fail
+        # after-script:
+        #   - [ $BITBUCKET_EXIT_CODE != 0 ] && taito deployment-revert:$BITBUCKET_BRANCH $BITBUCKET_COMMIT || :
+        #   - [ $BITBUCKET_EXIT_CODE != 0 ] && taito db-revert:$BITBUCKET_BRANCH $BITBUCKET_COMMIT || :
     # Test and verify deployment
     - step:
         script:
           - export taito_mode=ci
           - taito deployment-wait:$BITBUCKET_BRANCH
-          # TODO: tests require docker images from the previous steps!
-          # - taito test:$BITBUCKET_BRANCH
-          # - taito deployment-verify:$BITBUCKET_BRANCH
-    # Publish artifacts and release
-    - step:
-        script:
-          - export taito_mode=ci
-          - taito artifact-publish:$BITBUCKET_BRANCH
-          - taito artifact-release:$BITBUCKET_BRANCH
+          - taito test:$BITBUCKET_BRANCH
+          - taito deployment-verify:$BITBUCKET_BRANCH
+        # # TODO: revert deployment on fail
+        # after-script:
+        #   - [ $BITBUCKET_EXIT_CODE != 0 ] && taito deployment-revert:$BITBUCKET_BRANCH $BITBUCKET_COMMIT || :
+        #   - [ $BITBUCKET_EXIT_CODE != 0 ] && taito db-revert:$BITBUCKET_BRANCH $BITBUCKET_COMMIT || :
+    # Release artifacts (push previously built container images with a new tag)
     - parallel:
-      # Verify images by pushing them with the -untested tag prefix
       - step: # admin
           script:
             - export taito_mode=ci
-            - taito artifact-verify:admin:$BITBUCKET_BRANCH $BITBUCKET_COMMIT
+            - taito artifact-release:admin:$BITBUCKET_BRANCH $BITBUCKET_COMMIT
       - step: # client
           script:
             - export taito_mode=ci
-            - taito artifact-verify:client:$BITBUCKET_BRANCH $BITBUCKET_COMMIT
+            - taito artifact-release:client:$BITBUCKET_BRANCH $BITBUCKET_COMMIT
       - step: # graphql
           script:
             - export taito_mode=ci
-            - taito artifact-verify:graphql:$BITBUCKET_BRANCH $BITBUCKET_COMMIT
+            - taito artifact-release:graphql:$BITBUCKET_BRANCH $BITBUCKET_COMMIT
       - step: # server
           script:
             - export taito_mode=ci
-            - taito artifact-verify:server:$BITBUCKET_BRANCH $BITBUCKET_COMMIT
+            - taito artifact-release:server:$BITBUCKET_BRANCH $BITBUCKET_COMMIT
       - step: # www
           script:
             - export taito_mode=ci
-            - taito artifact-verify:www:$BITBUCKET_BRANCH $BITBUCKET_COMMIT
+            - taito artifact-release:www:$BITBUCKET_BRANCH $BITBUCKET_COMMIT
+    # Release build
+    - step:
+        script:
+          - export taito_mode=ci
+          - taito build-release:$BITBUCKET_BRANCH
